test/corpus/batman.txt
===
Batman
===

16 of "na";
2 of match {
	<space>;
	"batman";
}

---

(source_file
  (quantifier
    (amount)
    (expression
      (atom
        (literal))))
  (quantifier
    (amount)
    (expression
      (group
        (block
          (expression
            (atom
              (symbol)))
          (expression
            (atom
              (literal))))))))
