test/corpus/indented.txt
===
Indented
===

some of match {
	2 of <space>;
}

some of <char>;
";";

---

(source_file
  (quantifier
    (expression
      (group
        (block
          (quantifier
            (amount)
            (expression
              (atom
                (symbol))))))))
  (quantifier
    (expression
      (atom
        (symbol))))
  (expression
    (atom
      (literal))))
