test/corpus/var.txt
===
Var
===

let .a = {
	"a";
	"b";
}

.a;
.a;
    .         a;

---

(source_file
  (expression
    (variable_declaration
      (variable
        (identifier))
      (block
        (expression
          (atom
            (literal)))
        (expression
          (atom
            (literal))))))
  (expression
    (atom
      (variable
        (identifier))))
  (expression
    (atom
      (variable
        (identifier))))
  (expression
    (atom
      (variable
        (identifier)))))
